Bug 935368 - Wrong interface for dbus method of DefaultAdapter, r=echou